Refactor code. Add more failure response for the create handler in swagger doc.
