# note/api/v1/transport/rest/docs/swagger.json
@@ -19,7 +19,7 @@
     "paths": {
         "/purchase-order": {
             "post": {
-                "description": "Create a new note.",
+                "description": "Creating a new note. The client can assign the note ID with a UUID value but the service will return a conflict error when the note with the ID provided is already exists.",
                 "consumes": [
                     "application/json"
                 ],
@@ -43,6 +43,18 @@
                         "description": "Successfully created a new note",
                         "schema": {
                             "$ref": "#/definitions/rest.CreateResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict error due to the new note with an ID already exists in the service",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ResponseError"
+                        }
+                    },
+                    "499": {
+                        "description": "Cancel error when the request was aborted",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ResponseError"
                         }
                     }
                 }
@@ -92,6 +104,14 @@
             "properties": {
                 "note": {
                     "$ref": "#/definitions/note.Note"
+                }
+            }
+        },
+        "rest.ResponseError": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
